# maresme-county-gloria

./: .gitignore  .pre-commit-config.yaml  README.md  analysis.ipynb  pyproject.toml
app/: analysis.ipynb  main.py
app/api/: endpoints.py
app/processing/: calculate_affected_roads.py  calculate_flooding_area.py  calculate_population_impact.py
data/: After_Flood.tif  Before_Flood.tif  Flood_Change.tif  extent.geojson  flood_polygons.geojson
get_data/: get_VV_radar_before_and_after_flood.js  get_roads.py
presentation/: gloria.pptx  gloria_maresme.pptx
tests/: conftest.py
tests/api/: test_api.py
tests/processing/: test_affected_roads.py  test_calculate_flooding_area.py  test_calculate_population_impact.py
